[package]
name = "rsac-napi"
version = "0.4.3"
edition = "2021"
description = "Node.js/TypeScript bindings for rsac (Rust Cross-Platform Audio Capture)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Codeseys-Labs/rust-crossplat-audio-capture"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Path dependency to the rsac library crate.
#
# Canonical binding feature-resolution convention (docs/features.md): select the
# backend per-target with `default-features = false`, so each build compiles
# exactly the one backend matching the host platform and never pulls the other
# two backends' OS-only system deps. Mirrors bindings/rsac-python. (rsac-e8a3 —
# previously this crate depended on rsac with all default backends.)
# `compose` (multi-source channel composition, ADR-0011) is enabled
# unconditionally per-target so the compiled addon always carries the
# Composition/CompositionBuilder/Group classes (parity with Python and with how
# backends are always-on per platform). CI's bare `cargo check -p rsac-napi` +
# `npm run build` + `node --test` then always exercise the compose surface. The
# per-target `default-features = false` tables are the right place for this
# (rsac-2938: node feature selection uses root defaults per-target), so adding
# `compose` here does not collide with root default resolution (rsac-fba7).
[target.'cfg(windows)'.dependencies.rsac]
path = "../.."
default-features = false
features = ["feat_windows", "compose"]

[target.'cfg(target_os = "linux")'.dependencies.rsac]
path = "../.."
default-features = false
features = ["feat_linux", "compose"]

[target.'cfg(target_os = "macos")'.dependencies.rsac]
path = "../.."
default-features = false
features = ["feat_macos", "compose"]

[build-dependencies]
napi-build = "2"

# NOTE: no [profile.release] here — rsac-napi is a workspace member, so a member
# profile section is ignored by cargo (and used to emit a warning on every
# cargo invocation repo-wide). Release binary settings, if wanted, belong in the
# workspace root manifest.
