[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rsac"
version = "0.1.0"
description = "Python bindings for rsac — Rust Cross-Platform Audio Capture"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
keywords = ["audio", "capture", "streaming", "wasapi", "pipewire", "coreaudio"]

[project.optional-dependencies]
numpy = ["numpy>=1.21"]

[tool.maturin]
python-source = "."
module-name = "rsac._rsac"
features = ["pyo3/extension-module"]
