[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rsac"
version = "0.2.0"
description = "Python bindings for rsac (cross-platform audio capture library)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Baladithya Balamurugan" }]
requires-python = ">=3.9"
keywords = ["audio", "capture", "streaming", "wasapi", "coreaudio", "pipewire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

[project.optional-dependencies]
numpy = ["numpy>=1.21"]

[project.urls]
Repository = "https://github.com/baladita/rust-crossplat-audio-capture"
Issues = "https://github.com/baladita/rust-crossplat-audio-capture/issues"

[tool.maturin]
python-source = "."
module-name = "rsac._rsac"
features = ["pyo3/extension-module"]
