[package]
name = "audio-graph"
version = "0.1.0"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

# Audio capture (rsac library from workspace root)
rsac = { path = "../../..", features = ["feat_linux"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency
crossbeam-channel = "0.5"

# Graph data structure
petgraph = "0.7"

# Logging
log = "0.4"
env_logger = "0.11"

# Audio processing
rubato = "0.16"

# String similarity (entity resolution)
strsim = "0.11"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Configuration
toml = "0.8"
dirs = "5"

# Future dependencies (commented out — will be added when implementing)
# whisper-rs = "0.12"
# ort = "2.0"
# voice_activity_detector = "0.2"
# ndarray = "0.16"
# reqwest = { version = "0.12", features = ["blocking", "json"] }
