[package]
name = "audio-graph"
version = "0.1.0"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

# Audio capture (rsac library from workspace root)
# Platform-conditional: each OS pulls in only its own backend feature.
[target.'cfg(target_os = "linux")'.dependencies]
rsac = { path = "../../..", features = ["feat_linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
rsac = { path = "../../..", features = ["feat_windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
rsac = { path = "../../..", features = ["feat_macos"] }

[dependencies]
# Tauri framework
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-shell = "2.3.5"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Concurrency
crossbeam-channel = "0.5.15"

# Graph data structure
petgraph = "0.8.3"

# Logging
log = "0.4.29"
env_logger = "0.11.9"

# Audio processing
rubato = "1.0"
audioadapter-buffers = "2.0"

# String similarity (entity resolution)
strsim = "0.11.1"

# UUID generation
uuid = { version = "1.22.0", features = ["v4"] }

# Configuration
toml = "0.9.8"
dirs = "6.0.0"

# Voice Activity Detection
voice_activity_detector = "0.2.1"

# Speech recognition (needed by subtask 2)
whisper-rs = "0.16.0"

# Entity extraction (rule-based)
regex = "1"

# HTTP client for LLM sidecar
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

# Native LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1.139"
encoding_rs = "0.8"

# Future dependencies (commented out — will be added when implementing)
# ndarray = "0.16"
